# Rasterizer

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/include/: scene.h
app/src/: main.c  scene.c
assets/chthon/: boss.dae  boss.fbx
helpers/: rgbconv.py
include/: objloader.h  renderer.h  scene.h  transform.h  utils.h  window.h
lib/: CMakeLists.txt
lib/include/: datatypes.h  model.h  pngreader.h  renderer.h  triangle.h  window.h
lib/src/: objloader.c  pngreader.c  renderer.c  transform.c  triangle.c  window.c
src/: datatypes.c  main.c  objloader.c  pngreader.c  renderer.c  scene.c  utils.c  window.c
